[gd_scene load_steps=6 format=3 uid="uid://cabv6yl4ij8tu"]

[ext_resource type="Texture2D" uid="uid://cmsel7a7iv4n6" path="res://Objects/IceCream/Cone.png" id="1_fv7sv"]
[ext_resource type="Script" path="res://Objects/IceCream/ice_cream.gd" id="1_y5p6p"]
[ext_resource type="Texture2D" uid="uid://c486lj5fdc2th" path="res://Objects/IceCream/Scoop1.png" id="2_kecbo"]
[ext_resource type="Texture2D" uid="uid://o6opmsn31ko3" path="res://Objects/IceCream/Scoop2.png" id="3_yyn4k"]
[ext_resource type="Texture2D" uid="uid://dhorgav23ywpo" path="res://Objects/IceCream/Scoop3.png" id="4_g1dpg"]

[node name="IceCream" type="Node2D"]
script = ExtResource("1_y5p6p")

[node name="Cone" type="Sprite2D" parent="."]
texture = ExtResource("1_fv7sv")
hframes = 2

[node name="Scoop1" type="Sprite2D" parent="."]
texture = ExtResource("2_kecbo")
hframes = 4

[node name="Scoop2" type="Sprite2D" parent="."]
texture = ExtResource("3_yyn4k")
hframes = 4

[node name="Scoop3" type="Sprite2D" parent="."]
texture = ExtResource("4_g1dpg")
hframes = 4
